k8s/Testing/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myvizion-webtest
  namespace: myvizion-webtest-ns
  labels:
    app: myvizion-webtest
spec:
  strategy:
    rollingUpdate:
      maxSurge: 30%
      maxUnavailable: 0
    type: RollingUpdate
  replicas: 3
  selector:
    matchLabels:
      app: myvizion-webtest
  template:
    metadata:
      labels:
        app: myvizion-webtest
    spec:
      containers:
      - name: myvizion-webtest
        image: myvizion/website:devtest
        imagePullPolicy: Always
        resources:
          requests:
            memory: "100Mi"
            cpu: "10m"
          limits:
            memory: "350Mi"
            cpu: "250m"
        ports:
        - containerPort: 80
