k8s/Testing/service.yml
apiVersion: v1
kind: Service
metadata:
  name: myvizion-webtest-service
  namespace: myvizion-webtest-ns
spec:
  selector:
    app: myvizion-webtest
  ports:
    - port: 80 # Default port for image
