k8s/Testing/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myvizion-web-ingress
  namespace: myvizion-web-ns
spec:
  tls:
  - hosts:
    - myvizion.net
    secretName: myvizion-web-tls
  rules:
  - host: myvizion.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: myvizion-web-service
            port:
              number: 80
